# shark

./: .gitignore  .golangci.yml  .goreleaser.yaml  .impeccable.md  .npmrc  AGENT_AUTH.md  AGENT_BRIEF.md  API.md  ATTACK.md  BACKEND_WIRING_GAP_REPORT.md  CHANGELOG.internal.md  CLAUDE_SEC_ANALYSIS.md  CLOSE_GAPS_PLAN.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DASHBOARD.md  DASHBOARDV1.md  DASHBOARD_DX_EXECUTION_PLAN.md  DASHBOARD_DX_NEXT.md  DASHBOARD_DX_PROGRESS.md  DASHBOARD_DX_PROGRESS_SUMMARY.md  DASHBOARD_DX_REVIEW.md  DASHBOARD_DX_STATUS.json  DASHBOARD_DX_SUBAGENT_BRIEFS.md  DASHBOARD_GAPS.md  DESIGN.md  Dockerfile  FLOWS.md  FRONTEND_WIRING_STATUS.json  HANDOFF.md  HANDOFF_PROXY_V1_5.md  HANDOFF_W17.md  HANDOFF_W18.md  INVESTIGATE_REPORT.md  LICENSE  MTESTS.md  Makefile  Makefile.windows  PRICING_PROPOSAL.md  PRODUCT.md  (+36 more)
.claude/: settings.local.json
.github/: ISSUE_W15_multi_listener_proxy.md
admin/: hosted.html  index.html  package-lock.json  (+4 more)
sdk/python/: .gitignore  README.md  pyproject.toml
sdk/python/shark_auth/: __init__.py  _http.py  agents.py  api_keys.py  apps.py  audit.py  auth.py  branding.py  claims.py  client.py  consents.py  dcr.py  device_flow.py  dpop.py  errors.py  http_client.py  magic_link.py  may_act.py  mfa.py  oauth.py  organizations.py  paywall.py  proxy_lifecycle.py  proxy_rules.py  rbac.py  session.py  sessions.py  tokens.py  users.py  vault.py  webhooks.py
sdk/python/tests/: conftest.py  test_agents.py  test_auth.py  test_branding.py  test_device_flow.py  test_dpop.py  test_get_token_with_dpop_unit.py  test_http_with_dpop_unit.py  test_may_act.py  test_paywall.py  test_proxy_lifecycle.py  test_proxy_rules.py  test_smoke_admin.py  test_token_exchange_unit.py  test_tokens.py  test_users.py  test_vault.py
(+1311 files in other folders)
